<resources>
    <!-- Костыль. Я пока не знаю как его исправить. -->
    <string name="locales_for_UI" translatable="false">Русский, English</string>
    <string name="locales" translatable="false">ru, en</string>
    <!-- Костыль. -->
    <string name="app_name">MyAssets</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_bar_settings">Settings</string>
    <string name="nav_bar_assets">Assets</string>
    <string name="nav_bar_portfolios">Portfolios</string>
    <string name="nav_bar_home">Home</string>
    <string name="hello_blank_home_fragment">Home Fragment!!!</string>
    <string name="hello_blank_portfolio_fragment">HELLO PORTFOLIO!!!</string>
    <string name="hello_blank_assets_fragment">WELCOME ASSETS!</string>
    <string name="hello_blank_settings_fragment">SETTINGS!!!</string>
    <string name="currency">Currencies</string>
    <string name="settings_name">Settings</string>
    <string name="settings_language">Language</string>
    <string name="portfolio_select">Select</string>
    <string name="portfolio_list_label">My portfolios</string>
    <string name="new_portfolio_button">Create new portfolio</string>
    <string name="asset_delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="new_name">New name</string>
    <string name="portfolio_delete">Delete portfolio</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="error">Something went wrong: </string>
    <string name="portfolio_delete_confirmation">Delete this portfolio? This action cannot be undone!</string>
    <string name="portfolio_delete_confirmation_yes">Yes, delete it</string>
    <string name="new_portfolio">New Portfolio</string>
    <string name="label_of_assets">Assets</string>
    <string name="home_text_welcome">Welcome back!</string>
    <string name="home_text_now">Now you have:</string>
    <string name="home_text_portfolios">portfolios</string>
    <string name="home_text_assets">assets</string>
</resources>