<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.HomeFragment"
    android:orientation="vertical"
    android:padding="36dp" >

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_text_welcome"
        android:textStyle="bold"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/textNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/home_text_now"
        android:textSize="36sp"/>

    <LinearLayout
        android:id="@+id/viewGroupStats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/viewGroupPortfolios"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:backgroundTint="#009B00"
            card_view:cardCornerRadius="25dp"
            card_view:contentPadding="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/textPortfoliosCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="25" />

            <TextView
                android:id="@+id/textPortfoliosCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/home_text_portfolios" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/viewGroupAssets"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:backgroundTint="#009B00"
            card_view:cardCornerRadius="25dp"
            card_view:contentPadding="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/textAssetsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="45sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="147" />

            <TextView
                android:id="@+id/textAssetsCountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/home_text_assets" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>
